PB-49165 - Fix long tag name overflowing tag container in popup

--- a/src/less/components/tag.less
+++ b/src/less/components/tag.less
@@ -15,17 +15,23 @@
 }
 
 .tag {
-  padding: 0 1rem .2rem 1rem;
+  padding: .2rem 1rem;
+  white-space: nowrap;
+
   gap: .8rem;
+
+  border: none;
   border-radius: 1.1rem;
   background: var(--Tags-Tag-background);
   color: var(--Tags-Tag-text);
-  border: none;
-
-  /* hover */
 
   &:hover {
     color: var(--Tags-Tag-text);
+  }
+
+  .tag-content {
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
